# oneoff-test-dft

./: README.md  baseline.hpp  build-driver.sh  cpu.cc  generated-code.hpp  prompt.txt  run-driver.sh  trajectory-6efedda2428a41848367598675c38b1e.json  utilities.hpp
test/: CMakeLists.txt  build-tests.sh  test_dft_segment.cpp  test_gather_setup.cpp  test_work_distribution.cpp
test/include/: test_framework.hpp  test_utilities.hpp
